--- a/third.page.html
+++ b/third.page.html
@@ -11,34 +11,70 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f8ff;
+            background: linear-gradient(to right, #ff7e5f, #feb47b);
+            font-family: 'Arial', sans-serif;
         }
         .container {
             text-align: center;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            background-color: #ffffff;
+            border-radius: 20px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            max-width: 800px;
+            width: 100%;
         }
         h1 {
-            color: #ff6b6b;
+            color: #333;
             font-size: 36px;
             margin-bottom: 20px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .reveal-btn {
+            background-color: #ff6b6b;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 10px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            margin-bottom: 20px;
+        }
+        .reveal-btn:hover {
+            background-color: #d64541;
+            transform: scale(1.05);
+        }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
         }
         img {
-            max-width: 100%;
-            height: auto;
+            max-width: 250px; /* Limit width */
+            max-height: 250px; /* Limit height */
             border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            display: none; /* Initially hide the images */
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
     </style>
+    <script>
+        // Function to reveal images when button is clicked
+        function revealImages() {
+            const images = document.querySelectorAll('img');
+            images.forEach(img => {
+                img.style.display = 'block'; // Make images visible
+            });
+        }
+    </script>
 </head>
 <body>
     <div class="container">
         <h1>Here's Your Surprise!</h1>
-        <img src="https://via.placeholder.com/600x400.png?text=Surprise+Image" alt="Surprise Image">
-        <img src="https://via.placeholder.com/600x400.png?text=Surprise+Image" alt="Surprise Image">
-    </div>
+        <button class="reveal-btn" onclick="revealImages()">Click to Reveal the Surprise!</button>
+        <div class="image-container">
+            <img src="1 (2).jpg" alt="Surprise Image 1">
+            <img src="2.jpg" alt="Surprise Image 2">
+        </div>
     </div>
 </body>
 </html>
