--- a/index.html
+++ b/index.html
@@ -3,83 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surprise Image with Music</title>
+    <title>Enter Your Name</title>
     <style>
         body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #ff7e5f, #feb47b);
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
-            font-family: 'Arial', sans-serif;
+            background-attachment: fixed;
         }
         .container {
-            text-align: center;
-            padding: 30px;
-            background-color: #ffffff;
+            background: linear-gradient(to bottom right, #ffffff, #f0f8ff);
+            border: 2px solid #ff6b6b;
+            padding: 40px;
             border-radius: 20px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-            max-width: 800px;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+            text-align: center;
+            max-width: 500px;
             width: 100%;
+            margin: 20px;
+            transition: transform 0.2s ease-in-out;
+        }
+        .container:hover {
+            transform: scale(1.05);
         }
         h1 {
-            color: #333;
+            color: #ff6b6b;
             font-size: 36px;
             margin-bottom: 20px;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
-        .reveal-btn {
-            background-color: #ff6b6b;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 10px;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            margin-bottom: 20px;
-        }
-        .reveal-btn:hover {
-            background-color: #d64541;
-            transform: scale(1.05);
-        }
-        .image-container {
+        form {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             gap: 20px;
         }
-        img {
-            max-width: 250px;
-            max-height: 250px;
-            border-radius: 15px;
-            display: none;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+        label {
+            font-size: 20px;
+            color: #555;
+        }
+        input {
+            padding: 12px;
+            font-size: 18px;
+            border: 2px solid #ff6b6b;
+            border-radius: 10px;
+            outline: none;
+            transition: border-color 0.3s;
+        }
+        input:focus {
+            border-color: #d64541;
+        }
+        .buttons {
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+        }
+        button {
+            padding: 12px;
+            background-color: #ff6b6b;
+            color: white;
+            font-size: 20px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s, box-shadow 0.3s;
+            width: 48%;
+        }
+        button:hover {
+            background-color: #d64541;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Media Queries for Mobile Devices */
+        @media (max-width: 768px) {
+            .container {
+                padding: 30px;
+            }
+            input {
+                font-size: 16px;
+                padding: 10px;
+            }
+            button {
+                font-size: 18px;
+            }
         }
     </style>
-    <script>
-        function revealImages() {
-            const images = document.querySelectorAll('img');
-            images.forEach(img => {
-                img.style.display = 'block';
-            });
-        }
-    </script>
 </head>
 <body>
     <div class="container">
-        <h1>Here's Your Surprise!</h1>
-        <button class="reveal-btn" onclick="revealImages()">Click to Reveal the Surprise!</button>
-        <div class="image-container">
-            <img src="1 (2).jpg" alt="Surprise Image 1">
-            <img src="2.jpg" alt="Surprise Image 2">
-        </div>
+        <h1>Welcome!</h1>
+        <form action="welcome.html" method="GET">
+            <label for="name">Enter your cute name:</label>
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+            <div class="buttons">
+                <button type="submit">Submit</button>
+                <!-- Refresh button that leads to a third page -->
+                <button type="button" onclick="window.location.href='thirdpage.html'">Refresh</button>
+            </div>
+        </form>
     </div>
-
-    <!-- Background music -->
-    <audio autoplay loop>
-        <source src="path-to-your-music-file/dekho_na_zulfon.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
 </body>
 </html>
