Your commit message here

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="buttons">
                 <button type="submit">Submit</button>
                 <!-- Refresh button that leads to a third page -->
-                <button type="button" onclick="window.location.href='thirdpage.html'">Refresh</button>
+                <button type="button" onclick="window.location.href='third.page.html'">Refresh</button>
             </div>
         </form>
     </div>
