--- a/welcome.html
+++ b/welcome.html
@@ -106,7 +106,7 @@
     <div class="container">
         <h1>Welcome!</h1>
         <p id="welcomeMessage">Hello, welcome to the website!</p>
-        <button class="button" onclick="window.location.href='third.Page.html'">surprise for you</button>
+        <button class="button" onclick="window.location.href='third.page.html'">surprise for you</button>
     </div>
 </body>
 </html>
