--- a/third.page.html
+++ b/third.page.html
@@ -50,24 +50,29 @@
             gap: 20px;
         }
         img {
-            max-width: 250px; /* Limit width */
-            max-height: 250px; /* Limit height */
+            max-width: 250px;
+            max-height: 250px;
             border-radius: 15px;
-            display: none; /* Initially hide the images */
+            display: none;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
     </style>
     <script>
-        // Function to reveal images when button is clicked
         function revealImages() {
             const images = document.querySelectorAll('img');
             images.forEach(img => {
-                img.style.display = 'block'; // Make images visible
+                img.style.display = 'block';
             });
         }
     </script>
 </head>
 <body>
+    <!-- Background music -->
+    <audio autoplay loop>
+        <source src="Dekho-Na-Dekho-Na-Zulfon-Se.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     <div class="container">
         <h1>Here's Your Surprise!</h1>
         <button class="reveal-btn" onclick="revealImages()">Click to Reveal the Surprise!</button>
